# Ikon-Epic-Comparison

./: CMakeLists.txt  Comparison.cpp  Comparison.h  Option 1: General Comparison.csv  Option 2: Biggest and Smallest Resorts.csv  Option 3: Oldest Resorts on The Ikon and Epic Passes.csv  Option 4: Most Snowfall.csv  README.md  Resort.cpp  Resort.h  Size.cpp  Size.h  SkiPass.cpp  SkiPass.h  Ski_Resort_Testing.cpp  main.cpp  skiGraphs.R  skiresorts.csv
